--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   margin: 0;
+  background-color: rgb(243, 240, 252);
+}
+
+.df-container {
+  background-color: rgb(243, 240, 252) !important;
 }
